tests/test031.err
error: test031.tig:4:12: some fields belonging to the type `t' are missing: a
