tests/test031.tig
/* ERR: missing fields */
let
  type t = {a:int}
  var x := t {}
in
end
